# dotfiles

./: .bw.tmp  .cspell.json  .editorconfig  .gitignore  .gitleaks.toml  .prettierrc.yaml  .yamllint.yml  AGENTS.md  CONTEXT.md  Dockerfile  LICOES-APRENDIDAS.md  README.md  ROADMAP.md  SECURITY.md  Taskfile.yml  pyproject.toml  renovate.json5
.agents/: README.md  config.toml  curador-repo.md  engenheiro-qualidade.md  governador-continuidade-wip.md
.codex/: README.md
.cspell/: project-words.txt
.githooks/: commit-msg  conventional_emoji.py  pre-push  prepare-commit-msg
.github/: config.yaml  pull_request_template.md
.jira/: config.yml
app/: README.md
archive/: README.md
bootstrap/: README.md  _start.ps1  bootstrap-config.ps1  bootstrap-ubuntu-wsl.sh  bootstrap-ubuntu.original.sh  bootstrap-windows.ps1  software-install.ps1  software-list.ps1  symlinks.ps1  user-config.yaml.tpl
config/: config.toml  dev.toml  integrations.toml  quality.toml  runtime-secrets-cache.yaml  schema.json  secrets-rotation.yaml  time-surfaces.yaml  tooling.releases.yaml
df/: .aliases
docker/: bootstrap-linux-harness.Dockerfile
docs/: AI-AGENTS-CATALOG.md  AI-BACKLOG-LIVE-AUDIT.md  AI-CHAT-CONTRACTS-REGISTER.md  AI-DELEGATION-FLOW.md  AI-DONE-ISSUES-AUDIT.md  AI-FALLBACK-LEDGER.md  AI-FALLBACK-OPERATIONS.md  AI-GOVERNANCE-AND-REGRESSION.md  AI-ORTHOGRAPHY-LEDGER.md  AI-PAUSED-ISSUES-AUDIT.md  AI-RETROSPECTIVE-BACKFILL-AUDIT.md  AI-REVIEW-LEDGER.md  AI-SCRUM-MASTER-LEDGER.md  AI-SKILLS-CATALOG.md  AI-SOURCE-AUDIT.md  AI-STARTUP-AND-RESTART.md  AI-STARTUP-GOVERNANCE-MANIFEST.md  (+18 more)
(+574 files in other folders)
